# django-static_models

./: README.md  TODO  pyproject.toml
static_models/: __init__.py  apps.py  model_generator.py  response.py  settings.py  test.repl  utils.py  view_generator.py  views.py
static_models/management/commands/: common.py  modelstaticmerge.py  viewstaticmerge.py
static_models/tests/: test_generate.py
